# igx_raytracing

./: .gitignore  .gitmodules  CMakeLists.txt  Raytracing optimization.md
include/rt/: enums.hpp  main.hpp  raytracing_interface.hpp  structs.hpp
include/rt/scene/: niels_scene.hpp
include/rt/task/: cloud_task.hpp  composite_task.hpp  light_culling_task.hpp  main_task.hpp  primary_task.hpp  raygen_task.hpp  shadow_task.hpp
include/rt/task/cloud/: cloud_noise.hpp  cloud_subtask.hpp  cloud_task.hpp
res/shaders/: camera.glsl  cloud_noise.comp  cloud_noise.comp.spv  clouds.comp  clouds.comp.spv  compile.bat  compile.sh  composite.comp  composite.comp.spv  defines.glsl  dispatch_setup.comp  dispatch_setup.comp.spv  gui.frag  gui.frag.spv  gui.vert  gui.vert.spv  init.comp  init.comp.spv  light.glsl  light_culling.comp  light_culling.comp.spv  light_rt.glsl  lighting.comp  lighting.comp.nv.spv  lighting.comp.spv  material.glsl  nv_all.lighting.comp  nv_all.shadow.comp  post_processing.comp  post_processing.comp.spv  post_processing.glsl  primitive.glsl  rand_util.glsl  raygen.comp  raygen.comp.spv  reflection.comp  reflection.comp.spv  scene.glsl  shadow.comp  shadow.comp.nv.spv  (+9 more)
res/textures/: credits.txt
src/rt/: main.cpp  raytracing_interface.cpp  structs.cpp
src/rt/scene/: niels_scene.cpp
src/rt/task/: cloud_task.cpp  composite_task.cpp  light_culling_task.cpp  main_task.cpp  primary_task.cpp  raygen_task.cpp  shadow_task.cpp
src/rt/task/cloud/: cloud_noise.cpp  cloud_subtask.cpp  cloud_task.cpp
test/: main.cpp
test/scene/: niels_scene.cpp
